Nova atualização para meu projeto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Fernando Fontes Hipólito" />
+    <meta
+      name="description"
+      content="Melhor experiência: tomar um belo café, aliado aos melhores livros de nossa biblioteca. Aproveite também e saboreie nossas deliciosas receitas."
+    />
+    <meta
+      name="keywords"
+      content="biblioteca, café, estudos, aprendizado, receitas"
+    />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" />
