--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
   <body>
     <div class="page">
       testando
-      <header></header>
+      <header class="header"></header>
       <main class="content">
         <section class="recips"></section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
       </main>
-      <footer></footer>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
