--- a/index.html
+++ b/index.html
@@ -41,15 +41,70 @@
   </head>
   <body>
     <div class="page">
-      testando
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Triple Peaks Coffeeshop Logo"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li class="nav__link">
+              <a href="#section-receitas" class="nav_link">Receitas</a>
+            </li>
+            <li class="nav__link">
+              <a href="#section-cardapio" class="nav_link">Cardápio</a>
+            </li>
+            <li class="nav__link">
+              <a href="#section-reservar-uma-mesa" class="nav_link">Reservar uma mesa</a>
+            </li>
+            <li class="nav__link">
+              <a href="#section-contatos" class="nav_link">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="span-accent">Café especial</span>na biblioteca Triple
+          Peaks
+        </h1>
+        <p class="header__description">
+          Bem-vindo à nossa zona de estudo! Temos aquele cafezinho para
+          energizar você e vibrações aconchegantes para ajudá-lo a ser criativo.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Cafeteria-TriplePeaks-image"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <p class="header__paragraph">Horários:<span class="span-paragraph">Segunda a sexta (10:00 – 19:00)</span>
+          Sábado a Domingo (11:00 – 18:00)</p>
+          <p class="header__paragraph_right">200 Success Avenue, a cidade de Triple Peaks</p>
+        </div>
+        </div>
+      </header>
       <main class="content">
-        <section class="recips"></section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="section-receitas" class="recips">
+          <h2 class="recips__title">Receitas</h2>
+          <p class="recips__subtitle">Confira algumas receitas que coletamos para seu lanchinho caseiro:</p>
+          <div class="recips__videos">
+            <div class="video-item">
+              <iframe class="recips__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <p class="video-caption">Receita Aeropress<span class="span__space">~15 min</span></p>
+            </div>
+            <div class="video-item">
+              <iframe class="recips__iframe" src="https://www.youtube.com/embed/st571DYYTR8" title="The Ultimate French Press Technique" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <p class="video-caption">Receita de Prensa Francesa<span class="span__space_right">~5 min</span></p>
+            </div>
+          </div>
+        </section>
+        <section id="section-reservar-uma-mesa" class="reservation"></section>
+        <section id="section-cardapio" class="cardapio"></section>
+        <section class="sobregi"></section>
       </main>
-      <footer class="footer"></footer>
+      <footer id="section-contatos" class="footer"></footer>
     </div>
   </body>
 </html>
+
+
