Update BEM orientations

--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
             class="nav__logo"
           />
           <ul class="nav__links">
-            <li class="nav__link">
+            <li>
               <a href="#section-receitas" class="nav_link">Receitas</a>
             </li>
-            <li class="nav__link">
+            <li>
               <a href="#section-cardapio" class="nav_link">Cardápio</a>
             </li>
-            <li class="nav__link">
-              <a href="#section-reservar-uma-mesa" class="nav_link">Reservar uma mesa</a>
+            <li>
+              <a href="#section-reservar-uma-mesa" class="nav_link"
+                >Reservar uma mesa</a
+              >
             </li>
-            <li class="nav__link">
+            <li>
               <a href="#section-contatos" class="nav_link">Contatos</a>
             </li>
           </ul>
@@ -77,34 +79,60 @@
           class="header__image"
         />
         <div class="header__footer">
-          <p class="header__paragraph">Horários:<span class="span-paragraph">Segunda a sexta (10:00 – 19:00)</span>
-          Sábado a Domingo (11:00 – 18:00)</p>
-          <p class="header__paragraph_right">200 Success Avenue, a cidade de Triple Peaks</p>
-        </div>
+          <p class="header__paragraph">
+            Horários:<span class="span-paragraph"
+              >Segunda a sexta (10:00 – 19:00)</span
+            >
+            Sábado a Domingo (11:00 – 18:00)
+          </p>
+          <p class="header__paragraph-right">
+            200 Success Avenue, a cidade de Triple Peaks
+          </p>
         </div>
       </header>
       <main class="content">
         <section id="section-receitas" class="recips">
           <h2 class="recips__title">Receitas</h2>
-          <p class="recips__subtitle">Confira algumas receitas que coletamos para seu lanchinho caseiro:</p>
+          <p class="recips__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
           <div class="recips__videos">
             <div class="video-item">
-              <iframe class="recips__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              <p class="video-caption">Receita Aeropress<span class="span__space">~15 min</span></p>
+              <iframe
+                class="recips__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                title="The Ultimate AeroPress Technique (Episode #3)"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+              <p class="video-caption">
+                Receita Aeropress<span class="span-space">~15 min</span>
+              </p>
             </div>
             <div class="video-item">
-              <iframe class="recips__iframe" src="https://www.youtube.com/embed/st571DYYTR8" title="The Ultimate French Press Technique" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <p class="video-caption">Receita de Prensa Francesa<span class="span__space_right">~5 min</span></p>
+              <iframe
+                class="recips__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+                title="The Ultimate French Press Technique"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+              <p class="video-caption">
+                Receita de Prensa Francesa<span class="span-space-right"
+                  >~5 min</span
+                >
+              </p>
             </div>
           </div>
         </section>
-        <section id="section-reservar-uma-mesa" class="reservation"></section>
+        <section
+          id="section-reservar-uma-mesa"
+          class="reerver-uma-mesa"
+        ></section>
         <section id="section-cardapio" class="cardapio"></section>
-        <section class="sobregi"></section>
+        <section class="sobre"></section>
       </main>
       <footer id="section-contatos" class="footer"></footer>
     </div>
   </body>
 </html>
-
-
