--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#section-receitas" class="nav_link">Receitas</a>
+              <a href="#section-receitas" class="nav__link">Receitas</a>
             </li>
             <li>
-              <a href="#section-cardapio" class="nav_link">Cardápio</a>
+              <a href="#section-cardapio" class="nav__link">Cardápio</a>
             </li>
             <li>
               <a href="#section-reservar-uma-mesa" class="nav_link"
@@ -61,7 +61,7 @@
               >
             </li>
             <li>
-              <a href="#section-contatos" class="nav_link">Contatos</a>
+              <a href="#section-contatos" class="nav__link">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -92,14 +92,14 @@
       </header>
       <main class="content">
         <section id="section-receitas" class="recips">
-          <h2 class="recips__title">Receitas</h2>
-          <p class="recips__subtitle">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
           </p>
-          <div class="recips__videos">
+          <div class="recipes__videos">
             <div class="video-item">
               <iframe
-                class="recips__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="The Ultimate AeroPress Technique (Episode #3)"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
