--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a href="#section-cardapio" class="nav__link">Cardápio</a>
             </li>
             <li>
-              <a href="#section-reservar-uma-mesa" class="nav_link"
+              <a href="#section-reservar-uma-mesa" class="nav__link"
                 >Reservar uma mesa</a
               >
             </li>
@@ -91,7 +91,7 @@
         </div>
       </header>
       <main class="content">
-        <section id="section-receitas" class="recips">
+        <section id="section-receitas" class="recipes">
           <h2 class="recipes__title">Receitas</h2>
           <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
@@ -111,7 +111,7 @@
             </div>
             <div class="video-item">
               <iframe
-                class="recips__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="The Ultimate French Press Technique"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
