--- a/index.html
+++ b/index.html
@@ -125,10 +125,66 @@
             </div>
           </div>
         </section>
-        <section
-          id="section-reservar-uma-mesa"
-          class="reerver-uma-mesa"
-        ></section>
+        <section id="section-reservar-uma-mesa" class="reservation">
+          <h3 class="reservation__title">Reservar uma mesa</h3>
+          <form class="reservation__form">
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Nome *</label>
+              <input
+                id="name"
+                class="form__input form__input_el_name"
+                type="text"
+                placeholder="Name"
+                required
+              />
+              <label class="form__label" for="numero-de-convidados"
+                >Número de convidados *</label
+              >
+              <input
+                id="numero-de-convidados"
+                class="form__input"
+                type="number"
+                min="1"
+                max="8"
+                placeholder="1-8"
+                required
+              />
+              <label class="form__label" for="update">Data & hora *</label>
+              <input
+                id="update"
+                class="form__input form__input_el_update"
+                type="datetime-local"
+                required
+              />
+              <label class="form__label" for="email">Seu e-mail *</label>
+              <input
+                id="email"
+                class="form__input"
+                type="email"
+                placeholder="email@email.com"
+                required
+              />
+              <button class="form__button" type="submit">
+                Reservar uma mesa
+              </button>
+              <label
+                class="form__label form__label_direction_right"
+                for="checkbox"
+              >
+                <input
+                  id="checkbox"
+                  class="form__checkbox"
+                  type="checkbox"
+                  required
+                />
+                <span class="form__label-text"
+                  >Eu concordo com os termos de uso</span
+                >
+              </label>
+            </fieldset>
+          </form>
+        </section>
+
         <section id="section-cardapio" class="cardapio"></section>
         <section class="sobre"></section>
       </main>
