--- a/index.html
+++ b/index.html
@@ -128,56 +128,66 @@
         <section id="section-reservar-uma-mesa" class="reservation">
           <form class="reservation__form">
             <h3 class="reservation__title">Reservar uma mesa</h3>
-            <fieldset class="form__fieldset">
-              <label class="form__label" for="name">Nome *</label>
+            <fieldset class="reservation__form form__fieldset">
+              <label class="reservation__form form__label" for="name"
+                >Nome *</label
+              >
               <input
                 id="name"
-                class="form__input"
+                class="reservation__form form__input"
                 type="text"
                 placeholder="Name"
                 required
               />
-              <label class="form__label" for="numero-de-convidados"
+              <label
+                class="reservation__form form__label"
+                for="numero-de-convidados"
                 >Número de convidados *</label
               >
               <input
                 id="numero-de-convidados"
-                class="form__input"
+                class="reservation__form form__input"
                 type="number"
                 min="1"
                 max="8"
                 placeholder="1-8"
                 required
               />
-              <label class="form__label" for="update">Data & hora *</label>
+              <label class="reservation__form form__label" for="update"
+                >Data & hora *</label
+              >
               <input
                 id="update"
-                class="form__input form__input_el_update"
+                class="reservation__form form__input form__input_el_update"
                 type="datetime-local"
                 required
               />
-              <label class="form__label" for="email">Seu e-mail *</label>
+              <label class="reservation__form form__label" for="email"
+                >Seu e-mail *</label
+              >
               <input
                 id="email"
-                class="form__input"
+                class="reservation__form form__input"
                 type="email"
                 placeholder="email@email.com"
                 required
               />
-              <button class="form__button" type="submit">
+              <button class="reservation__form form__button" type="submit">
                 Reservar uma mesa
               </button>
               <label
-                class="form__label form__label_direction_right"
+                class="reservation__form form__label form__label_direction_right"
                 for="checkbox"
               >
                 <input
                   id="checkbox"
-                  class="form__checkbox"
+                  class="reservation__form form__checkbox"
                   type="checkbox"
                   required
                 />
-                <span class="label-text">Eu concordo com os termos de uso</span>
+                <span class="reservation__form label-text"
+                  >Eu concordo com os termos de uso</span
+                >
               </label>
             </fieldset>
           </form>
