--- a/index.html
+++ b/index.html
@@ -126,66 +126,58 @@
           </div>
         </section>
         <section id="section-reservar-uma-mesa" class="reservation">
+          <h3 class="reservation__title">Reservar uma mesa</h3>
           <form class="reservation__form">
-            <h3 class="reservation__title">Reservar uma mesa</h3>
-            <fieldset class="reservation__form form__fieldset">
-              <label class="reservation__form form__label" for="name"
-                >Nome *</label
-              >
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Nome *</label>
               <input
                 id="name"
-                class="reservation__form form__input"
+                class="form__input"
                 type="text"
                 placeholder="Name"
                 required
               />
-              <label
-                class="reservation__form form__label"
-                for="numero-de-convidados"
+              <label class="form__label" for="numero-de-convidados"
                 >Número de convidados *</label
               >
               <input
                 id="numero-de-convidados"
-                class="reservation__form form__input"
+                class="form__input"
                 type="number"
                 min="1"
                 max="8"
                 placeholder="1-8"
                 required
               />
-              <label class="reservation__form form__label" for="update"
-                >Data & hora *</label
-              >
+              <label class="form__label" for="update">Data & hora *</label>
               <input
                 id="update"
-                class="reservation__form form__input form__input_el_update"
+                class="form__input form__input_el_update"
                 type="datetime-local"
                 required
               />
-              <label class="reservation__form form__label" for="email"
-                >Seu e-mail *</label
-              >
+              <label class="form__label" for="email">Seu e-mail *</label>
               <input
                 id="email"
-                class="reservation__form form__input"
+                class="form__input"
                 type="email"
                 placeholder="email@email.com"
                 required
               />
-              <button class="reservation__form form__button" type="submit">
+              <button class="form__button" type="submit">
                 Reservar uma mesa
               </button>
               <label
-                class="reservation__form form__label form__label_direction_right"
+                class="form__label form__label_direction_right"
                 for="checkbox"
               >
                 <input
                   id="checkbox"
-                  class="reservation__form form__checkbox"
+                  class="reservation__checkbox"
                   type="checkbox"
                   required
                 />
-                <span class="reservation__form label-text"
+                <span class="form__label-text"
                   >Eu concordo com os termos de uso</span
                 >
               </label>
