Solving BEM problems 6

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </section>
         <section id="section-reservar-uma-mesa" class="reservation">
           <h3 class="reservation__title">Reservar uma mesa</h3>
-          <form class="reservation__form form__elements">
+          <form class="reservation__form reservation__form-elements">
             <fieldset class="reservation__container">
               <label class="reservation__label" for="name">Nome *</label>
               <input
