--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span-accent">Café especial</span>na biblioteca Triple
-          Peaks
+          <span class="header__span-accent">Café especial</span>na biblioteca
+          Triple Peaks
         </h1>
         <p class="header__description">
           Bem-vindo à nossa zona de estudo! Temos aquele cafezinho para
@@ -79,7 +79,7 @@
         />
         <div class="header__footer">
           <p class="header__paragraph">
-            Horários:<span class="span-paragraph"
+            Horários:<span class="header__span-paragraph"
               >Segunda a sexta (10:00 – 19:00)</span
             >
             Sábado a Domingo (11:00 – 18:00)
@@ -96,7 +96,7 @@
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
           </p>
           <div class="recipes__videos">
-            <div class="video-item">
+            <div class="recipes__video-item">
               <iframe
                 class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
@@ -104,11 +104,13 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
-              <p class="video-caption">
-                Receita Aeropress<span class="span-space">~15 min</span>
+              <p class="recipes__video-caption">
+                Receita Aeropress<span class="recipes__span-space"
+                  >~15 min</span
+                >
               </p>
             </div>
-            <div class="video-item">
+            <div class="pecipes__video-item">
               <iframe
                 class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
@@ -116,8 +118,9 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
-              <p class="video-caption">
-                Receita de Prensa Francesa<span class="span-space-right"
+              <p class="recipes__video-caption">
+                Receita de Prensa Francesa<span
+                  class="recipes__span-space-right"
                   >~5 min</span
                 >
               </p>
