--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 >
               </p>
             </div>
-            <div class="pecipes__video-item">
+            <div class="recipes__video-item">
               <iframe
                 class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
