--- a/index.html
+++ b/index.html
@@ -33,18 +33,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#section-receitas" class="nav__link">Receitas</a>
+              <a href="#recipes" class="nav__link">Receitas</a>
             </li>
             <li>
-              <a href="#section-menu" class="nav__link">Cardápio</a>
+              <a href="#menu" class="nav__link">Cardápio</a>
             </li>
             <li>
-              <a href="#section-reservar-uma-mesa" class="nav__link"
-                >Reservar uma mesa</a
-              >
+              <a href="#reservation" class="nav__link">Reservar uma mesa</a>
             </li>
             <li>
-              <a href="#section-contatos" class="nav__link">Contatos</a>
+              <a href="#contacts" class="nav__link">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -74,7 +72,7 @@
         </div>
       </header>
       <main class="content">
-        <section id="section-receitas" class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Receitas</h2>
           <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
@@ -111,7 +109,7 @@
             </div>
           </div>
         </section>
-        <section id="section-reservar-uma-mesa" class="reservation">
+        <section id="reservation" class="reservation">
           <h3 class="reservation__title">Reservar uma mesa</h3>
           <form class="reservation__form form">
             <fieldset class="reservation__container">
@@ -172,7 +170,7 @@
             </fieldset>
           </form>
         </section>
-        <section id="section-menu" class="menu">
+        <section id="menu" class="menu">
           <h4 class="menu__title">Cardápio</h4>
           <p class="menu__subtitle">
             Preparamos café a partir de grãos torrados localmente com
@@ -251,7 +249,7 @@
             </div>
           </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
           <h6 class="about__title">Sobre o Café</h6>
           <div class="about__content">
             <p class="about__paragraph">
@@ -270,7 +268,7 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer id="section-contatos" class="footer">
+      <footer id="contacts" class="footer">
         <div class="footer__content">
           <img
             src="./images/logo_coffeeshop_light.svg"
